<resources>
	<string name="app_name">Moco Comic</string>
	<string name="menu_home">Home</string>
	<string name="menu_explore">Explore</string>
	<string name="menu_favorite">Favorite</string>
	<string name="menu_profile">Profile</string>

	<string name="text_show_less">Show less</string>
	<string name="text_show_more">Show more</string>
	<string name="text_retry">Retry</string>
	<string name="text_load_more">Load More</string>
	<string name="text_something_went_wrong">Something Went Wrong</string>
	<string name="text_unexpected_error">An unexpected error occurred. Please try again later.</string>
	<string name="text_continue">Continue</string>
	<string name="text_read">Read</string>
	<string name="text_color_scheme">Color Scheme</string>
	<string name="text_english">English</string>
	<string name="text_setting">Setting</string>
	<string name="text_language">Language</string>
	<string name="text_biometric_security">Biometric Security</string>
	<string name="text_off">Off</string>
	<string name="text_enable_blocked_comic">Enable Blocked Comic</string>
	<string name="text_on">On</string>
	<string name="text_app_theme">App Theme</string>
	<string name="text_it_empty">It\'s Empty!</string>
	<string name="text_there_nothing_here">There\'s nothing to see here at the moment.</string>
	<string name="text_login_required">Login Required</string>
	<string name="text_need_login_to_access_feature">You need to log in to access this feature. Please sign in to continue.</string>
	<string name="text_login">Login</string>
	<string name="text_share">Share</string>
	<string name="text_block_comic">Block Comic</string>
	<string name="text_comic_blocked_successfully">Comic \'%1$s\' blocked successfully!</string>
	<string name="text_comic_blocked_failed">Comic blocked failed!\n%1$s</string>
	<string name="text_comic_saved_favorite_successfully">Comic \'%1$s\' saved to favorite successfully!</string>
	<string name="text_comic_deleted_favorite_successfully">Comic \'%1$s\' deleted from favorite successfully!</string>
	<string name="text_search_comic">Search Comic…</string>
	<string name="text_secure">Secure</string>
	<string name="text_use_biometrics_to_use_app">Use your biometrics to use app.</string>
	<string name="text_sure_want_to_logout">Are you sure want to logout?</string>
	<string name="text_no">No</string>
	<string name="text_yes">Yes</string>
	<string name="text_comic_by">By %1$s</string>
	<string name="text_filter">Filter</string>
	<string name="text_genre">Genre</string>
	<string name="text_apply">Apply</string>
	<string name="text_synopsis">Synopsis</string>
	<string name="text_info">Info</string>
	<string name="text_alternative">Alternative</string>
	<string name="text_author">Author</string>
	<string name="text_publish_date">Publish Date</string>
	<string name="text_publisher">Publisher</string>
	<string name="text_type">Type</string>
	<string name="text_status">Status</string>
	<string name="text_chapters">Chapters</string>
	<string name="text_popular">Popular</string>
	<string name="text_new">New</string>
	<string name="text_update">Update</string>
	<string name="text_login_with_google">Login with Google</string>
	<string name="text_email">Email</string>
	<string name="text_history">History</string>
	<string name="text_settings">Settings</string>
	<string name="text_contact_us">Contact Us</string>
	<string name="text_terms_conditions"><![CDATA[Terms & Conditions]]></string>
	<string name="text_logout">Logout</string>
	<string name="text_follow_by_system">Follow By System</string>
	<string name="text_light_mode">Light Mode</string>
	<string name="text_dark_mode">Dark Mode</string>
	<string name="text_privacy_policy">Privacy Policy</string>
	<string name="text_trial_period_expired">Trial Period Expired</string>
	<string name="text_your_trial_period_has_ended">Your trial period has ended.</string>
	<string name="text_demo_app">Demo App</string>
	<string name="text_this_is_demo_app_this_app_will_expire_in">This is demo app. You have %1$s days to using this app.</string>
	<string name="text_exit">Exit</string>

</resources>