<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardHome"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/dashboardExplore"
            android:icon="@drawable/ic_explore"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/dashboardFavorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/dashboardProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>
</menu>
