<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	style="@style/Widget.Material3.SideSheet.Modal"
	android:layout_width="wrap_content"
	android:layout_height="match_parent"
	android:layout_gravity="end"
	app:layout_behavior="@string/side_sheet_behavior">

	<com.google.android.material.tabs.TabLayout
		android:id="@+id/tabLayout"
		style="@style/Widget.Material3.TabLayout.OnSurface"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.tabs.TabItem
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_filter" />

		<com.google.android.material.tabs.TabItem
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_genre" />

	</com.google.android.material.tabs.TabLayout>

	<androidx.viewpager2.widget.ViewPager2
		android:id="@+id/viewPager"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@id/btnApplyFilter"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tabLayout" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnApplyFilter"
		style="@style/Widget.Material3.Button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/text_apply"
		android:layout_margin="@dimen/dp_16"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>