<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/ivIcon"
		android:layout_width="80dp"
		android:layout_height="80dp"
		android:adjustViewBounds="true"
		android:scaleType="fitXY"
		app:tint="?colorOnSurface"
		app:layout_constraintBottom_toTopOf="@+id/tvAlertTitle"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/alertToolbar"
		app:layout_constraintVertical_chainStyle="packed"
		app:srcCompat="@drawable/ic_error" />

	<com.google.android.material.textview.MaterialTextView
		android:id="@+id/tvAlertTitle"
		style="@style/TextAppearance.Material3.TitleMedium"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/dp_16"
		android:layout_marginTop="8dp"
		android:textAlignment="center"
		android:text="@string/text_something_went_wrong"
		app:layout_constraintBottom_toTopOf="@+id/tvAlertDescription"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/ivIcon" />

	<com.google.android.material.textview.MaterialTextView
		android:id="@+id/tvAlertDescription"
		style="@style/TextAppearance.Material3.BodySmall"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/dp_16"
		android:layout_marginTop="4dp"
		android:textAlignment="center"
		android:text="@string/text_unexpected_error"
		app:layout_constraintBottom_toTopOf="@+id/btnAction"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvAlertTitle" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnAction"
		style="@style/Widget.Material3.Button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/dp_16"
		android:layout_marginTop="@dimen/dp_16"
		android:minWidth="100dp"
		android:text="@string/text_retry"
		app:iconPadding="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvAlertDescription" />

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/alertToolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:navigationIcon="@drawable/ic_arrow_left"
		app:navigationIconTint="?colorOnSurface" />

</merge>